improve Position argument